# prememora

./: .env.sample  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  test_adapter.py
.claude/plans/: 31-live-e2e-test.md
adapter/: __init__.py  client.py  local_embedder.py  minimax_embedder.py  minimax_llm_client.py  minimax_reranker.py  ontology_stubs.py  patch_mirofish.py  zep_types.py
backtesting/: __init__.py  event_replay.py  hindsight.py  polymarket_history.py
docs/: architecture-insights.md  minimax-quirks.md  zep-graphiti-mapping.md
docs/decisions/: 001-replace-zep-with-graphiti.md  (+3 more)
e2e/: __init__.py  data_collector.py  helpers.py  run_live.py  soak_test.py
ingestors/: __init__.py  coingecko.py  crypto_news.py  fear_greed.py  fred_macro.py  gdelt.py  kalshi.py  metaculus.py  onchain.py  orchestrator.py  polymarket_ws.py  predictit.py  reddit_sentiment.py  rss_feeds.py  whale_tracker.py
pipeline/: __init__.py  context.py  trigger.py
tests/: conftest.py  test_calibration_gate.py  test_coingecko.py  test_context.py  test_crypto_news.py  test_e2e_helpers.py  test_edge_calculator.py  test_exit_monitor.py  test_fear_greed.py  test_gdelt.py  test_hindsight.py  test_kalshi.py  test_metaculus.py  test_onchain.py  test_orchestrator.py  test_paper_engine.py  test_pipeline_trigger.py  test_polymarket_history.py  test_polymarket_ws.py  test_predictit.py  test_rss_feeds.py  test_strategy_review.py  test_whale_tracker.py
trading/: __init__.py  calibration_gate.py  edge_calculator.py  exit_monitor.py  paper_engine.py  strategy_review.py
